<resources>
    <string name="app_name">Handycrafts Shop</string>
    <string name="todo">todo</string>
    <string name="buy_handcrafts">Buy Handcrafts</string>
    <string name="vase_flower">Vase Flower</string>
    <string name="price">Price</string>
    <string name="stock">Stock</string>
    <string name="rp_16_000">Rp. 16.000</string>
    <string name="value_stock">250</string>
    <string name="btn_buy">Buy</string>
    <string name="register">Register</string>
    <string name="profile">Profile</string>
    <string name="activity_login_email">Email</string>
    <string name="activity_login_password">Password</string>
    <string name="activity_login_register">Register, jika belum mempunyai akun</string>
    <string name="activity_login_forget">Lupa Password?</string>
    <string name="activity_login_remember">Remember me</string>
    <string name="activity_login_logining">Login</string>
    <string name="activity_post_headtext">Post</string>
    <string name="activity_post_harga">Harga</string>
    <string name="activity_post_total">Total harga</string>
    <string name="activity_post_map">Posisi Anda</string>
    <string name="activity_post_posting">Post Barang</string>
    <string name="activity_wishlist_main">Wishlist</string>
    <string name="activity_history_main">History</string>
    <string name="google_map_api_key">AIzaSyBURYmKz8zSrfqhue4TugiSlF-bAuat8NQ</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>