<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.BuyActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary" />

    <ImageView
        android:id="@+id/btn_profile_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:layout_marginStart="10dp"
        android:src="@drawable/ic_back"
        android:contentDescription="@string/todo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vase_flower"
        android:textAlignment="center"
        android:layout_marginTop="13dp"
        android:textSize="18sp"
        android:textColor="#fff"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_item"
        android:padding="18dp"
        android:layout_margin="28dp"
        android:layout_below="@+id/topBar">

        <ImageView
            android:id="@+id/fotoHandcraft"
            android:layout_width="310dp"
            android:layout_height="200dp"
            android:background="@color/cardview_dark_background"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="18dp"
            android:contentDescription="@string/todo" />

        <LinearLayout
            android:id="@+id/titleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="3dp"
            android:paddingStart="5dp"
            android:paddingEnd="0dp"
            android:layout_below="@+id/fotoHandcraft">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_price"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:src="@drawable/ic_stock"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:src="@drawable/ic_location"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:src="@drawable/ic_deskrips"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/valueBuy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="9dp"
            android:paddingEnd="30dp"
            android:layout_below="@+id/fotoHandcraft"
            android:layout_toEndOf="@id/titleTv">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rp_16_000"
                android:textSize="20sp"
                android:textColor="#000" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value_stock"
                android:textSize="20sp"
                android:textColor="#000" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Magetan"
                android:textSize="20sp"
                android:textColor="#000" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="Terbuat dari tembaga dan alumunium yang terbaik."
                android:textSize="16dp"
                android:textColor="#000" />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_buy"
            android:layout_below="@+id/valueBuy"
            android:background="@drawable/background_button"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="18dp"/>
    </RelativeLayout>

</RelativeLayout>